docs(commitizen): adding commitizen

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-react": "^4.0.1",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^7.25.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -45,5 +46,36 @@
       "react-app",
       "react-app/jest"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog",
+      "types": {
+        "feat": {
+          "description": "New features",
+          "title": "Features"
+        },
+        "fix": {
+          "description": "Bug fixes",
+          "title": "Bug fixes"
+        },
+        "docs": {
+          "description": "Documentation (e.g. readme)",
+          "title": "Documentation"
+        },
+        "refactor": {
+          "description": "Source code improvement that does not change functionality and is not a fix",
+          "title": "Code Refactoring"
+        },
+        "test": {
+          "description": "Adding test specs",
+          "title": "Tests"
+        },
+        "chore": {
+          "description": "Change that does not affect the application source code (e.g. build)",
+          "title": "Chores"
+        }
+      }
+    }
   }
 }
